Disable CORS restrictions for testing - allow all origins